--- a/frontend/src/app/components/slider/slider.component.html
+++ b/frontend/src/app/components/slider/slider.component.html
@@ -1,18 +1,17 @@
-<div class="container">
-    <div class="panel active" style="background-image: url('https://plus.unsplash.com/premium_photo-1661757739361-b05e5a077ed0?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8bWFjcmFtZXxlbnwwfHwwfHx8MA%3D%3D&w=1000&q=80')">
-      <h3>Estilo natural moderno</h3>
-    </div>
-    <div class="panel" style="background-image: url('https://images.pexels.com/photos/6806697/pexels-photo-6806697.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1')">
-      <h3>Arte en nudos</h3>
-    </div>
-    <div class="panel" style="background-image: url('https://c0.wallpaperflare.com/preview/793/176/940/dream-catcher-dreamcatcher-dream-catcher.jpg')">
-      <h3>Decora con macramé.</h3>
-    </div>
-    <div class="panel" style="background-image: url('https://img.freepik.com/fotos-premium/macrame-corazon-rojo-enmarcado-guirnalda-navidad-sobre-mesa-madera-regalo-san-valentin_154092-7109.jpg')">
-      <h3>Hecho a mano.</h3>
-    </div>
-    <div class="panel" style="background-image: url('https://www.budivis.com/image/cache/catalog/A%20Blog/thubnail/ghjghj-1920x1080.jpg')">
-      <h3>Elegancia natural</h3>
-    </div>
+<div class="carousel-container">
+  <button class="scroll-btn left" (click)="scrollCarousel(-1)">
+    <span class="nav-arrow">&#10092;</span>
+  </button>
 
-  </div>
+  <ul class="carousel" #carousel>
+    <li *ngFor="let product of featuredProducts">
+      <div class="card" [style.backgroundImage]="'url(' + product.img + ')'">
+        <h3>{{ product.title }}</h3>
+      </div>
+    </li>
+  </ul>
+
+  <button class="scroll-btn right" (click)="scrollCarousel(1)">
+    <span class="nav-arrow">&#10093;</span>
+  </button>
+</div>
